# nanosploit

./: README.md  pyproject.toml
nanosploit/: __main__.py  client.py  dns.py  server.py  victim.py
