[tool.poetry]
name = "nanosploit"
version = "1.0.0"
description = "Minimalist C2 server for educational purpose."
authors = ["sven-eliasen <jo.pettersen@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dnslib = "^0.9.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
